--- a/PropertyManageSystem/WebRoot/WEB-INF/web.xml
+++ b/PropertyManageSystem/WebRoot/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
