--- a/PropertyManageSystem/WebRoot/WEB-INF/classes/.gitignore
+++ b/PropertyManageSystem/WebRoot/WEB-INF/classes/.gitignore
@@ -1,9 +1,11 @@
-/daoimp/
-/service/
-/serviceimp/
 /Anno/
 /Model/
 /Utilx/
 /ViewModel/
 /action/
+/applicationContext.xml
 /dao/
+/daoimp/
+/service/
+/serviceimp/
+/struts.xml
